--- a/package.json
+++ b/package.json
@@ -1,18 +1,13 @@
 {
-  "author": "A Programmer",
-  "name": "My Project",
-  "description": "Very Descriptive",
+  "author": "Matthew Livingston",
+  "name": "ngEngage",
   "version": "0.0.1",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Nss/angular-brunch-seed-javascript"
+    "url": "https://github.com/mattliving/ngEngage"
   },
   "engines": {
     "node": ">=0.8.0"
-  },
-  "scripts": {
-    "start": "node_modules/.bin/brunch watch --server",
-    "test": "testacular start test/testacular.conf.js"
   },
   "dependencies": {},
   "devDependencies": {
